# pygmy

./: CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  discord.rs  init.rs  main.rs  markdown.rs  ntfy.rs  pygmy_claude_snippet.md  self_update.rs  send.rs  telegram.rs  usage.rs  version_check.rs
