[package]
name = "pygmy"
version = "0.0.0"
edition = "2024"
description = "Ping me — notifications from AI agents (Telegram, Discord)"
license = "MIT"
repository = "https://github.com/flipbit03/pygmy"

[features]
binary-release = []

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3"
home = "0.5"
pulldown-cmark = "0.13"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
